--- a/feedback.html
+++ b/feedback.html
@@ -24,7 +24,7 @@
       href="https://fonts.googleapis.com/css2?family=Wix+Madefor+Display:wght@400..800&display=swap"
       rel="stylesheet"
     />
-    <script src="script.js" defer></script>
+    <script src="scripts.js" defer></script>
   </head>
   <body>
     <main>
@@ -39,16 +39,22 @@
         <nav class="navbar">
           <ul>
             <li>
-              <a class="nav-link" href="#introduction-section">Introduction</a>
+              <a class="nav-link" href="index.html#introduction-section"
+                >Introduction</a
+              >
             </li>
             <li>
-              <a class="nav-link" href="#curriculum-section">Curriculum</a>
+              <a class="nav-link" href="index.html#curriculum-section"
+                >Curriculum</a
+              >
             </li>
             <li>
-              <a class="nav-link" href="#key-features-section">Key Features</a>
+              <a class="nav-link" href="index.html#key-features-section"
+                >Key Features</a
+              >
             </li>
             <li>
-              <a class="nav-link" href="#sign-up-section">Sign Up</a>
+              <a class="nav-link" href="index.html#sign-up-section">Sign Up</a>
             </li>
           </ul>
         </nav>
@@ -251,11 +257,17 @@
                 We never share your personal information with third parties.
                 <br />
                 By submitting, you agree to our
-                <a href="#" target="_blank" class="user-agreement-link"
+                <a
+                  href="https://example.com"
+                  target="_blank"
+                  class="user-agreement-link"
                   >Terms of Service</a
                 >
                 and
-                <a href="#" target="_blank" class="user-agreement-link"
+                <a
+                  href="https://example.com"
+                  target="_blank"
+                  class="user-agreement-link"
                   >Privacy Policy</a
                 >.
               </p>
